force-app/main/default/objects/Coronavirus__c/Coronavirus__c.object-meta.xml
<CustomObject>
    <label>Coronavirus</label>
    <nameField>
        <label>Coronavirus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coronaviri</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>