force-app/main/default/objects/Coronavirus__c/fields/Daily_new_confirmed_cases__c.field-meta.xml
<CustomField>
    <fullName>Daily_new_confirmed_cases__c</fullName>
    <label>Daily new confirmed cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>