force-app/main/default/objects/Coronavirus__c/fields/Daily_new_confirmed_deaths__c.field-meta.xml
<CustomField>
    <fullName>Daily_new_confirmed_deaths__c</fullName>
    <label>Daily new confirmed deaths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>