force-app/main/default/objects/Coronavirus__c/fields/Date_of_Social_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Social_Restrictions__c</fullName>
    <label>Date of Social Restrictions</label>
    <type>Date</type>
</CustomField>