force-app/main/default/objects/Coronavirus__c/fields/DateOccurred__c.field-meta.xml
<CustomField>
    <fullName>DateOccurred__c</fullName>
    <label>DateOccurred</label>
    <type>Date</type>
</CustomField>