force-app/main/default/objects/Coronavirus__c/fields/Has_Social_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Has_Social_Restrictions__c</fullName>
    <formula>DateOccurred__c &gt; Date_of_Social_Restrictions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Social Restrictions</label>
    <type>Checkbox</type>
</CustomField>