force-app/main/default/objects/Coronavirus__c/fields/Has_Travel_Ban__c.field-meta.xml
<CustomField>
    <fullName>Has_Travel_Ban__c</fullName>
    <formula>DateOccurred__c &gt;= Travel_ban_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Travel Ban</label>
    <type>Checkbox</type>
</CustomField>