force-app/main/default/objects/Coronavirus__c/fields/Total_confirmed_deaths__c.field-meta.xml
<CustomField>
    <fullName>Total_confirmed_deaths__c</fullName>
    <label>Total confirmed deaths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>