force-app/main/default/objects/Coronavirus__c/fields/Total_COVID_19_tests__c.field-meta.xml
<CustomField>
    <fullName>Total_COVID_19_tests__c</fullName>
    <label>Total COVID-19 tests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>