force-app/main/default/objects/Coronavirus__c/fields/Total_predicted_cases__c.field-meta.xml
<CustomField>
    <fullName>Total_predicted_cases__c</fullName>
    <formula>Total_confirmed_deaths__c * 50</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total predicted cases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>