force-app/main/default/objects/Coronavirus__c/fields/Travel_ban_date__c.field-meta.xml
<CustomField>
    <fullName>Travel_ban_date__c</fullName>
    <label>Travel ban date</label>
    <type>Date</type>
</CustomField>