force-app/main/default/objects/Coronavirus__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>DateOccurred__c</columns>
    <columns>Has_Travel_Ban__c</columns>
    <columns>Travel_ban_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>